--- a/Css/general.css
+++ b/Css/general.css
@@ -27,11 +27,11 @@
 }
 
 .grid--3-col {
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .grid--4-col {
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .heading-primary,
@@ -112,4 +112,8 @@
   */
 
   box-shadow: inset 0 0 0 3px rgb(202, 199, 199);
+}
+
+strong {
+  font-weight: 500;
 }
