--- a/Css/style.css
+++ b/Css/style.css
@@ -204,6 +204,37 @@ body {
   height: 2.4rem;
 }
 
+/***********************************/
+/*       Featured in Section       */
+/***********************************/
+
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+}
+
+.featured-logo-box {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 2rem;
+}
+
+.header-featured-in {
+  font-size: 1.4rem;
+  font-weight: 500;
+  letter-spacing: 0.75px;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 2.4rem;
+  color: #555;
+}
+
+.featured-logo-img {
+  height: 3.2rem;
+  filter: brightness(0%);
+  opacity: 75%;
+}
+
 /************************************/
 /*       How it works Section       */
 /************************************/
@@ -216,14 +247,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .step-img {
   width: 35%;
   align-content: center;
-}
-
-.step-text-box {
 }
 
 .step-number {
@@ -234,4 +263,110 @@ body {
 .step-desc {
   font-size: 1.8rem;
   line-height: 1.8;
+}
+
+.step-img-box::after {
+  content: "";
+  display: block;
+  /* NOTE: Can't use height as the block element has no default height. Even if there was content, it would be static and thus not responsive. THUS, add a margin-bottom */
+  padding-bottom: 60%;
+  width: 60%;
+  background-color: #cf711faa;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -2;
+}
+
+.step-img-box::before {
+  content: "";
+  display: block;
+  /* NOTE: Can't use height as the block element has no default height. Even if there was content, it would be static and thus not responsive. THUS, add a margin-bottom */
+  padding-bottom: 45%;
+  width: 45%;
+  background-color: #fdf2e9aa;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+/************************************/
+/*       Meals Section       */
+/************************************/
+
+.section-meals {
+  padding: 0 0 9.6rem 0;
+}
+
+.meal {
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  border-radius: 1.1rem;
+  overflow: hidden;
+}
+
+.meal-content {
+  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+.meal-img {
+  width: 100%;
+}
+
+.tag {
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  border-radius: 2rem;
+  margin-bottom: 1.2rem;
+  font-weight: 700;
+  margin-right: 0.4rem;
+}
+
+.tag--vegetarian {
+  background-color: #51cf66;
+}
+.tag--vegan {
+  background-color: #94d82d;
+}
+
+.tag--paleo {
+  background-color: #ffd43b;
+}
+.meal-name {
+  font-size: 2rem;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  list-style: none;
+}
+.meal-attribute {
+  display: flex;
+  align-items: center;
+  font-size: 1.8rem;
+  line-height: 1.4;
+  gap: 1.6rem;
+}
+
+.meal-icon {
+  /* font size is the same as setting height and width */
+  font-size: 2.4rem;
+  /* height: 2.4rem;
+  width: 2.4rem; */
+  /* 
+  Both didn't work for the icon
+  stroke: #e67e22;     
+  fill: red; 
+  */
+  color: #e67e22;
 }
