--- a/Css/general.css
+++ b/Css/general.css
@@ -6,7 +6,11 @@
   margin-right: 1.6rem !important;
 }
 
-.container-centered {
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.container {
   max-width: 120rem;
   padding: 0 3.2rem;
   margin: 0 auto;
@@ -16,6 +20,10 @@
   display: grid;
   row-gap: 9.6rem;
   column-gap: 6.4rem;
+}
+
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
 }
 
 .grid--center-v {
@@ -32,6 +40,10 @@
 
 .grid--4-col {
   grid-template-columns: repeat(4, 1fr);
+}
+
+.grid--5-col {
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .heading-primary,
@@ -70,6 +82,21 @@
   letter-spacing: 0.75px;
 }
 
+.btn.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn.btn--form:hover {
+  color: #45260a;
+  background-color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -77,10 +104,12 @@
   font-weight: 700;
   padding: 1.6rem 3.2rem;
   border-radius: 0.9rem;
-  max-width: 25rem;
   border: none;
   text-decoration: none;
-  transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
+
+  cursor: pointer;
+  font-family: inherit;
 }
 
 .btn--orange:link,
@@ -114,6 +143,36 @@
   box-shadow: inset 0 0 0 3px rgb(202, 199, 199);
 }
 
+*:focus {
+  /* outline: none;    Kills anything for user accessibility. DON'T DO IT
+  outline: 4px dotted #e67e22;   LOOKS UGLY */
+  box-shadow: 0 0 0 0.8rem hsla(28, 80%, 52%, 0.5);
+}
+
 strong {
   font-weight: 500;
+}
+
+ul,
+ol {
+  list-style-type: none;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.8rem;
+  gap: 1rem;
+}
+
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+
+.list-icon {
+  font-size: 3rem;
+  color: #e67e22;
 }
