--- a/Css/style.css
+++ b/Css/style.css
@@ -295,9 +295,9 @@ body {
   z-index: -1;
 }
 
-/************************************/
-/*       Meals Section       */
-/************************************/
+/***********************************/
+/*          Meals Section          */
+/***********************************/
 
 .section-meals {
   padding: 0 0 9.6rem 0;
@@ -307,10 +307,11 @@ body {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   border-radius: 1.1rem;
   overflow: hidden;
+  transition: all 0.4s;
 }
 
 .meal-content {
-  padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+  padding: 3.2rem 4.8rem;
 }
 .meal-img {
   width: 100%;
@@ -330,6 +331,7 @@ body {
 .tag--vegetarian {
   background-color: #51cf66;
 }
+
 .tag--vegan {
   background-color: #94d82d;
 }
@@ -344,7 +346,8 @@ body {
   margin-bottom: 3.2rem;
 }
 
-.meal-attributes {
+.meal-attributes,
+.meal-list {
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -369,4 +372,369 @@ body {
   fill: red; 
   */
   color: #e67e22;
+}
+
+.meal:hover {
+  transform: translateY(-1.2rem);
+  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.2);
+}
+
+.diets {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+  border-radius: 1.1rem;
+  overflow: hidden;
+  padding: 3.2rem 4.8rem;
+}
+
+.diets h2 {
+  width: 100%;
+  text-align: center;
+}
+
+.all-recipes {
+  display: block;
+  justify-content: center;
+  text-align: center;
+  font-size: 1.8rem;
+  margin: 4.8rem auto;
+  width: fit-content;
+}
+
+.link:link,
+.link:visited {
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  font-weight: 700;
+  font-size: 2.4rem;
+  padding-bottom: 3.4px;
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
+/************************************/
+/*       Testimonials Section       */
+/************************************/
+
+.section-testimonials {
+  background-color: #fdf2e9;
+  display: grid;
+  grid-template-columns: 55fr 45fr;
+  align-items: center;
+}
+.testimonial-container {
+  padding: 9.6rem 4.8rem;
+}
+
+.testimonials-testimonies {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 4.8rem;
+  column-gap: 8rem;
+}
+
+.testimonials-testimony {
+  gap: 1.6rem;
+}
+.tesimonials-customer-img {
+  width: 6.4rem;
+  border-radius: 50%;
+  margin-bottom: 1.2rem;
+}
+.testimonials-quote {
+  color: #6f6f6f;
+  font-size: 1.8rem;
+  line-height: 1.8;
+  margin-bottom: 1.6rem;
+}
+.testimonial-name {
+  color: #6f6f6f;
+  font-size: 1.6rem;
+  text-align: right;
+}
+
+/* gallery section */
+.testimonials-gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.6rem;
+  padding: 1.6rem;
+}
+
+.gallery-item {
+  overflow: hidden;
+}
+
+.testimonials-img {
+  width: 100%;
+  display: block;
+  transition: all 0.3s;
+}
+
+.testimonials-img:hover {
+  transform: scale(1.05);
+}
+
+/*************************************/
+/*          Pricing Section          */
+/*************************************/
+
+.section-pricing {
+  padding: 9.6rem 0;
+}
+
+.header-plan {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+
+.pricing-plan {
+  border-radius: 1.1rem;
+  width: 75%;
+}
+
+.pricing-plan--starter {
+  justify-self: end;
+  border: 2px solid #fdf2e9;
+  padding: 4.6rem;
+}
+
+.pricing-plan--complete {
+  background-color: #fdf2e9;
+  padding: 4.8rem;
+  position: relative;
+  overflow: hidden;
+  /* Hides the "best Value" margin that overflowed. */
+}
+
+.pricing-plan--complete::after {
+  content: "Best Value";
+  position: absolute;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 800;
+  top: 5%;
+  right: -25%;
+  padding: 0.8rem 10rem;
+  transform: rotate(45deg);
+
+  background-color: #ffd43b;
+}
+.plan-name {
+  color: #cf711f;
+  font-weight: 600;
+  font-size: 2rem;
+  text-transform: uppercase;
+  margin-bottom: 3.2rem;
+}
+.plan-price {
+  font-size: 6.2rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1.6rem;
+}
+.plan-text {
+  font-size: 1.8rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
+}
+
+.plan-signup {
+  margin: 4.8rem auto 0 auto;
+}
+
+.plan-crossout {
+  text-decoration-line: line-through;
+}
+
+.plan-feature {
+  text-align: center;
+}
+
+.plan-detail {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  text-align: center;
+}
+
+.feature-icon {
+  color: #e67e22;
+  height: 4.2rem;
+  width: 4.2rem;
+  font-size: 2.4rem;
+  font-weight: 700;
+  margin-bottom: 3.2rem;
+  border-radius: 50%;
+  background-color: #fdf2e9;
+  padding: 1.6rem;
+}
+.feature-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 700;
+  margin-bottom: 1.6rem;
+}
+.feature-text {
+  font-size: 1.8rem;
+  color: #333;
+  line-height: 1.8;
+  margin-bottom: 1.6rem;
+}
+
+/*************************************/
+/*            CTA Section            */
+/*************************************/
+
+.cta {
+  display: grid;
+  grid-template-columns: 70fr 30fr;
+  border-radius: 1.1rem;
+  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+  background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+  overflow: hidden;
+}
+
+.cta-text-box {
+  color: #45260a;
+  padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+}
+
+.cta .heading-secondary {
+  /* color: #45260a;    ---  inherit will inherit the collor from it's parent. .cta-text-box*/
+  color: inherit;
+  margin-bottom: 3.2rem;
+}
+
+.cta-text {
+  font-size: 1.5rem;
+  line-height: 1.8rem;
+  margin-bottom: 4.8rem;
+}
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(235, 150, 76, 0.349),
+      rgba(231, 126, 35, 0.35)
+    ),
+    url("../imgs/eating.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+
+.cta-form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+
+.cta-form input,
+.cta-form select {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.6rem;
+  font-family: inherit;
+  color: inherit;
+  border: none;
+  background-color: #fdf2e9;
+  border-radius: 0.9rem;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.cta-form input::placeholder {
+  color: #aaa;
+}
+
+.cta-form select {
+}
+
+.cta *:focus {
+  outline: none;
+
+  box-shadow: 0 0 0 0.6rem rgba(253, 242, 233, 0.5);
+}
+
+/**********/
+/* footer */
+/**********/
+
+.footer {
+  padding: 9.6rem 0;
+}
+.footer-logo {
+  display: block;
+  margin: 0 3.2rem 3.2rem 0;
+}
+
+.social-links {
+  display: flex;
+  gap: 2.4rem;
+}
+
+.social-icon {
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.logo-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.copyright {
+  font-size: 1.4rem;
+  color: #767676;
+  margin-top: auto;
+}
+
+.contacts {
+  font-style: normal;
+  font-size: 1.6rem;
+  line-height: 1.6;
+}
+.footer-header {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 3.2rem;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+  line-height: 1.6rem;
+  transition: all 0.3s;
+}
+
+.footer-link:hover,
+.footer-link:active {
+  color: #555;
 }
