--- a/Css/general.css
+++ b/Css/general.css
@@ -46,6 +46,10 @@
   grid-template-columns: repeat(5, 1fr);
 }
 
+.grid--footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
 .heading-primary,
 .heading-secondary,
 .heading-tertiary {
