--- a/Css/style.css
+++ b/Css/style.css
@@ -606,6 +606,7 @@ body {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
   overflow: hidden;
+  margin-bottom: 9.6rem;
 }
 
 .cta-text-box {
@@ -679,8 +680,11 @@ body {
 /* footer */
 /**********/
 
+/* / 48 / 64 / 80 / 96 / 128 */
 .footer {
-  padding: 9.6rem 0;
+  /* top horizontal bottom */
+  padding: 8rem 0 8rem;
+  background-color: #eee;
 }
 .footer-logo {
   display: block;
